fix scrollbar

--- a/frontend/src/components/Overlay/Overlay.css
+++ b/frontend/src/components/Overlay/Overlay.css
@@ -40,4 +40,5 @@
   text-align: center;
   overflow: hidden;
   display: flex;
+  height: 100%;
 }
